gitops/base/k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 368763425814.dkr.ecr.us-east-1.amazonaws.com/frontend:e512498fbee8a57e711edf504bb4d0059ae0ece0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
